<resources>
    <string name="app_name">mtg-collection-app</string>
    <string name="title_magic_the_gathering">Magic the Gathering</string>
    <string name="title_collection">COLLECTION</string>
    <string name="button_login">Log in</string>
    <string name="switch_info">STAY LOGGED IN</string>
    <string name="credits">By Ztrider</string>
    <string name="login_username">Username</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="click_here_to_sign_up">Click here to sign up</string>
    <string name="enter_a_valid_email_adress">Enter a valid email adress</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="validate_password">Validate password</string>
    <string name="sign_up">Sign up</string>
</resources>
